force-app/main/default/objects/FEC_Sequence__c/FEC_Sequence__c.object-meta.xml
<CustomObject>
    <label>FEC Sequence</label>
    <nameField>
        <label>FEC Sequence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FEC Sequences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>