force-app/main/default/objects/FEC_Sequence__c/fields/FEC_Current_Value__c.field-meta.xml
<CustomField>
    <fullName>FEC_Current_Value__c</fullName>
    <label>Current Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>