force-app/main/default/objects/FEC_Sequence__c/fields/FEC_Prefix_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Prefix_Code__c</fullName>
    <label>Prefix Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>