force-app/main/default/objects/FEC_Sequence__c/fields/FEC_Prefix_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Prefix_Name__c</fullName>
    <label>Prefix Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>